2023-08-18T00:34:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5897371089 # 1109
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: last 14d: unq all: 3 4162
* notice: prev accum: outdated-unq outdated-all / unq all: 1621 149421 / 1651 153824
* notice: next accum: outdated-unq outdated-all / unq all: 1623 149718 / 1651 153917
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -37 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-08-03] / [2023-08-04 2023-08-17]

2023-08-17T16:09:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5893305253 # 1108
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-17
* notice: last 14d: unq all: 3 4146
* notice: prev accum: outdated-unq outdated-all / unq all: 1621 149421 / 1651 153729
* notice: next accum: outdated-unq outdated-all / unq all: 1621 149421 / 1651 153824
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -90 / +3 +208 -0 -0 / 3 208
* notice: removed / changed dates: [] / [2023-08-03 2023-08-17]

2023-08-17T08:09:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5888389116 # 1107
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-17
* notice: last 14d: unq all: 3 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1621 149421 / 1648 153616
* notice: next accum: outdated-unq outdated-all / unq all: 1621 149421 / 1651 153729
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -130 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-08-03 2023-08-17]

2023-08-17T00:34:24Z: