@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-18T00:34:44Z",
-  "count" : 262,
+  "timestamp" : "2023-08-18T08:09:44Z",
+  "count" : 132,
   "count_minmax" : [ 112, 299 ],
-  "count_decinc" : [ -37, +299 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -167, +299 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
