@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-18T00:34:44Z",
+  "timestamp" : "2023-08-18T08:09:44Z",
   "count_outdated" : 149718,
   "uniques_outdated" : 1623,
-  "count" : 153917,
-  "uniques" : 1651,
+  "count" : 154029,
+  "uniques" : 1653,
   "clones" : [
     {
       "timestamp": "2023-08-04T00:00:00Z",
-      "count": 262,
+      "count": 132,
       "count_minmax": [ 112, 299 ],
-      "count_decinc": [ 37, 299 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 167, 299 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-08-05T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-08-18T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
