@@ -1,11 +1,11 @@
 {
-  "count": 4162,
+  "count": 4144,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-08-04T00:00:00Z",
-      "count": 262,
-      "uniques": 2
+      "count": 132,
+      "uniques": 1
     },
     {
       "timestamp": "2023-08-05T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 301,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-08-18T00:00:00Z",
+      "count": 112,
+      "uniques": 2
     }
   ]
 }
